--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -2,6 +2,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>{%- if page.title -%}{{page.title}} | {{site.title}}{%- else -%}{{site.title}}{%- endif -%}</title>
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
   {%- feed_meta -%}
