--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -11,6 +11,7 @@
               <use xlink:href="{{ 'assets/minima-social-icons.svg#rss' | relative_url }}"></use>
             </svg><span>Subscribe</span>
           </a>
+          &nbsp;<a href="{{ site.baseurl }}/sitemap.xml">Sitemap</a>
         </p>
       {%- if site.author %}
         <ul class="contact-list">
