--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -11,7 +11,7 @@
               <use xlink:href="{{ 'assets/minima-social-icons.svg#rss' | relative_url }}"></use>
             </svg><span>Subscríbete</span>
           </a>
-          &nbsp;<a href="{{ site.baseurl }}/sitemap.xml">Mapa de sitio</a>
+          &nbsp;|&nbsp;<a href="{{ site.baseurl }}/sitemap.xml">Mapa de sitio</a>
         </p>
       {%- if site.author %}
         <ul class="contact-list">
