--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -11,11 +11,12 @@
   {%- endif -%}
 
   {%- include custom-head.html -%}
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/favicon-16x16.png">
-  <link rel="manifest" href="{{ site.baseurl }}/site.webmanifest">
-  <link rel="mask-icon" href="{{ site.baseurl }}/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon-48x48.png" sizes="48x48" />
+  <link rel="icon" type="image/svg+xml" href="{{ site.baseurl }}/favicon.svg" />
+  <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="El baúl de Howard" />
+  <link rel="manifest" href="{{ site.baseurl }}/site.webmanifest" />
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 </head>
