Add Youtube links

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -25,6 +25,7 @@
       {%- endif %}
       </div>
       <div class="footer-col">
+        <p><a href="https://www.youtube.com/@baulHoward">El baúl de Howard en youtube</a></p>
         <p>{{ site.description | escape }}</p>
       </div>
     </div>
